--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -10,6 +10,9 @@
 <body>
   <h1 style="color: blue">Index</h1>
   <p>This is an HTML file served up by Flask</p>
+
+  <a href="SPL-boy.html">Vote</a>
+
 </body>
 
 </html>
