--- a/templates/login.html
+++ b/templates/login.html
@@ -7,18 +7,19 @@
   </head>
   <body>
 <div class="login-box">
+<form action=/authenticate method="post" id="auth">
   <h1>Login</h1>
   <div class="textbox">
     <i class="fas fa-user"></i>
-    <input type="text" placeholder="Username">
+    <input type="text" name="usnno" placeholder="USN">
   </div>
 
   <div class="textbox">
     <i class="fas fa-lock"></i>
-    <input type="password" placeholder="Password">
+    <input type="password" name="pass" placeholder="Password">
   </div>
-
-  <input type="button" class="btn" value="Sign in">
+</form>
+  <input type="submit" form = "auth" class="btn" value="Sign in">
 </div>
   </body>
 </html>
