--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
   <h1>Login</h1>
   <div class="textbox">
     <i class="fas fa-user"></i>
-    <input type="text" name="usnno" placeholder="USN">
+    <input type="text" name="rollno" placeholder="Roll No">
   </div>
 
   <div class="textbox">
