made upload page

--- a/templates/Vote-page.html
+++ b/templates/Vote-page.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<form action=/submit method="post" id="form1">
+<form action=/submitVote method="post" id="form1">
 <style>
 body {
   background-image: url({{ url_for('static',filename='styles/bg2.jpg') }});
