--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,9 @@
 <div class="login-box">
 <form action=/authenticate method="post" id="auth">
   <h1>Login</h1>
+  <p align=center color=red>
+    {{Msg}}
+  </p>
   <div class="textbox">
     <i class="fas fa-user"></i>
     <input type="text" name="rollno" placeholder="Roll No">
