Add/remove candidates, admin login page

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -11,10 +11,21 @@
             <button type='submit'>Add</button>
         </form><br><br><br>
         <table style="width:50%">
+            <th>
+                
+            </th>
+            <th style="background:'#3CA9FA'">
+                Candidate Name
+            </th>
+            <th style="background:'#3CA9FA'">
+                Category
+            </th>
+            <th>
+            </th>
             {%for cand in data%}
             <tr>
                 <td>
-                    {{cand[0]}}
+                    <img src={{ url_for('static',filename='images/'+ GetPath(cand[1]) ) }} width="75" height="100">
                 </td>
                 <td>
                     {{cand[1]}}
@@ -23,7 +34,10 @@
                     {{cand[2]}}
                 </td>
                 <td>
-                    <button type='button'>X</button>
+                    <form action=/delete method="post" id="form2">
+                        <input type=hidden value={{cand[0]}} name=CID>
+                        <button type='submit' name={{cand[0]}}>X</button>
+                    </form>
                 </td>
             </tr>
             {%endfor%}
