--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -21,6 +21,14 @@ body{
   margin-bottom: 50px;
   padding: 13px 0;
 }
+.message{
+  width: 100%;
+  overflow: hidden;
+  font-size: 14px;
+  padding: 8px 0;
+  margin: 8px 0;
+  color: red;
+}
 .textbox{
   width: 100%;
   overflow: hidden;
