--- a/templates/login.html
+++ b/templates/login.html
@@ -6,24 +6,31 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
   </head>
   <body>
-<div class="login-box">
-<form action=/authenticate method="post" id="auth">
-  <h1>Login</h1>
-  <p align=center color=red>
-    {{Msg}}
-  </p>
-  <div class="textbox">
-    <i class="fas fa-user"></i>
-    <input type="text" name="rollno" placeholder="Roll No">
-  </div>
-
-  <div class="textbox">
-    <i class="fas fa-lock"></i>
-    <input type="password" name="pass" placeholder="Password">
-  </div>
-</form>
-  <input type="submit" form = "auth" class="btn" value="Sign in">
-</div>
+    <div class="login-box">
+      <form action=/vote method="post" id="auth">
+        <h1>Login</h1>
+        <div>
+          <div class="message">
+            <p align=center color=#FF0000>
+              {{Msg}}
+            </p>
+          </div>
+          <div class="textbox">
+            <i class="fas fa-user"></i>
+            <input type="text" name="rollno" placeholder="Roll No">
+          </div>
+          <div class="textbox">
+            <i class="fas fa-lock"></i>
+            <input type="password" name="pass" placeholder="Password">
+          </div>
+        </div>
+      </form>
+      <input type="submit" form = "auth" class="btn" value="Sign in">
+      <p align=center color=white>
+        Login as 
+        <a href= "{{ url_for('admin_login') }}" >Admin</a>
+      </p>
+    </div>
   </body>
 </html>
 
