--- a/templates/adminlogin.html
+++ b/templates/adminlogin.html
@@ -5,7 +5,7 @@
     <title>login</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
   </head>
-  <body>
+  <body style="background: url({{ url_for('static',filename='styles/bg.jpg') }}) no-repeat;  background-size: cover;">
 <div class="login-box">
 <form action=/authadmin method="post" id="auth">
   <h1>Admin Login</h1>
