--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -3,9 +3,32 @@ body{
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: url(bg.jpg) no-repeat;
-  background-size: cover;
 }
+
+.topnav {
+  overflow: hidden;
+  background-color: #4caf50;
+}
+
+.topnav a {
+  float: left;
+  color: ##4caf50;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
 .login-box{
   width: 280px;
   position: absolute;
