--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -12,7 +12,7 @@ body{
 
 .topnav a {
   float: left;
-  color: ##4caf50;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -21,7 +21,7 @@ body{
 
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
+  color: #4caf50;
 }
 
 .topnav a.active {
