--- a/templates/admin-page.html
+++ b/templates/admin-page.html
@@ -7,10 +7,10 @@
         <div class="topnav">
              {%if isElectionOpen()%}
                  <a class="active" href="{{url_for('admin_openView')}}" target='iFrame_1'>View candidates</a>
-                 <a href="#home" target='iframe_1'>Close voting</a>
+                 <a href="{{url_for('close_Voting')}}">Close voting</a>
              {%else%}
                  <a class="active" href="{{url_for('admin_openView')}}" target='iFrame_1'>Edit candidates</a>
-                 <a href="#news" target='iframe_1'>Open voting</a>
+                 <a href="{{url_for('open_Voting')}}">Open voting</a>
                  <a href="#news" target='iframe_1'>View results</a>
                  <a href="#contact" target='iframe_1'>Reset voting</a>
              {%endif%}
@@ -18,7 +18,9 @@
              <a href="#contact" target='iframe_1'>View voter credentials</a>
         </div>
         <div>
-        <iframe name='iFrame_1' style='width:100%;height:100%'></iframe>
+        <iframe name='iFrame_1' style='width:100%;height:100%'>
+        </iframe>
+
     </body>
 </html>
 
