implemented new functions - change password, view result, reset, get voters passcode

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -29,6 +29,12 @@ body{
   color: white;
 }
 
+.heading {
+  text-align:left;
+  color:black;
+  border-bottom: 3px solid #4caf50;
+}
+
 .login-box{
   width: 280px;
   position: absolute;
