--- a/templates/admin.html
+++ b/templates/admin.html
@@ -18,13 +18,13 @@
             </form><br><br><br>
         {%endif%}
         <table style="width:50%">
-            <th style="text-align:left;color:black;border-bottom: 3px solid #4caf50">
+            <th class='heading'>
                 
             </th>
-            <th style="text-align:left;color:black;border-bottom: 3px solid #4caf50">
+            <th class='heading'>
                 Candidate Name
             </th>
-            <th style="text-align:left;color:black;border-bottom: 3px solid #4caf50">
+            <th class='heading'>
                 Category
             </th>
             <th>
