--- a/templates/admin-page.html
+++ b/templates/admin-page.html
@@ -11,11 +11,11 @@
              {%else%}
                  <a class="active" href="{{url_for('admin_openView')}}" target='iFrame_1'>Edit candidates</a>
                  <a href="{{url_for('open_Voting')}}">Open voting</a>
-                 <a href="#news" target='iframe_1'>View results</a>
-                 <a href="#contact" target='iframe_1'>Reset voting</a>
+                 <a href="{{url_for('ViewResults')}}" target='iFrame_1'>View results</a>
+                 <a href="{{url_for('reset_election')}}" target='iFrame_1'>Reset</a>
              {%endif%}
-             <a href="#contact" target='iframe_1'>Change password</a>
-             <a href="#contact" target='iframe_1'>View voter credentials</a>
+             <a href="{{url_for('chngPasswd')}}" target='iFrame_1'>Change password</a>
+             <a href="{{url_for('ViewCred')}}" target='iFrame_1'>View voter credentials</a>
         </div>
         <div>
         <iframe name='iFrame_1' style='width:100%;height:100%'>
