added password protection to reset voting

--- a/templates/ChangePassword.html
+++ b/templates/ChangePassword.html
@@ -5,6 +5,7 @@
     <body>
     <div class='login-box'>
     <form name='chpswd' method='POST' action='/changepassword'>
+        <h1 style='color:black'>Change Password</h1>
         <input type='password' class='textbox' name='oldpsswd' placeholder='Old password'></input>
         <input type='password' class='textbox' name='newpsswd1' placeholder='New password'></input>
         <input type='password' class='textbox' name='newpsswd2' placeholder='Retype new password'></input>
