--- a/templates/adminlogin.html
+++ b/templates/adminlogin.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>login</title>
+    <title>Admin login</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
   </head>
   <body style="background: url({{ url_for('static',filename='styles/bg.jpg') }}) no-repeat;  background-size: cover;">
