Bug fixes, warning message to open, close, and reset and image in results.

--- a/templates/ResetConfirmation.html
+++ b/templates/ResetConfirmation.html
@@ -5,7 +5,7 @@
     <body>
     <div class='login-box'>
     <form name='resetvoting' method='POST' action='/resetVoting'>
-        <h1 style='color:black'>Reset</h1>
+        <p style='color:black'> Once you reset voting, you will lose all data including results and candidates. Are you sure you want to continue? </p>
         <input type='password' class='textbox' name='password' placeholder='Enter admin password'></input>
         <input class="btn" type="submit" value="Reset" style='color:black'>Reset</input>
     </form>
