--- a/templates/CloseConfirmation.html
+++ b/templates/CloseConfirmation.html
@@ -5,9 +5,9 @@
     <body>
     <div class='login-box'>
     <form name='resetvoting' method='POST' action='/closeVoting'>
-        <h1 style='color:black'>Close</h1>
+        <p style='color:black'> Once you close voting, it cannot be opened for voting again. Are you sure you want to continue? </p>
         <input type='password' class='textbox' name='password' placeholder='Enter admin password'></input>
-        <input class="btn" type="submit" value="Reset" style='color:black'>Close</input>
+        <input class="btn" type="submit" value="Close" style='color:black'></input>
     </form>
     <div class="message">
         <p align=center color=#FF0000>
