--- a/templates/OpenConfirmation.html
+++ b/templates/OpenConfirmation.html
@@ -5,9 +5,9 @@
     <body>
     <div class='login-box'>
     <form name='resetvoting' method='POST' action='/openVoting'>
-        <h1 style='color:black'>Open</h1>
+        <p style='color:black'>Once you open voting, you will not be able to edit candidates. Are you sure you want to open voting? </p>
         <input type='password' class='textbox' name='password' placeholder='Enter admin password'></input>
-        <input class="btn" type="submit" value="Reset" style='color:black'>Open</input>
+        <input class="btn" type="submit" value="Open" style='color:black'></input>
     </form>
     <div class="message">
         <p align=center color=#FF0000>
