--- a/templates/ChangePassword.html
+++ b/templates/ChangePassword.html
@@ -7,8 +7,8 @@
     <form name='chpswd' method='POST' action='/changepassword'>
         <h1 style='color:black'>Change Password</h1>
         <input type='password' class='textbox' name='oldpsswd' placeholder='Old password'></input>
-        <input type='password' class='textbox' name='newpsswd1' placeholder='New password'></input>
-        <input type='password' class='textbox' name='newpsswd2' placeholder='Retype new password'></input>
+        <input type='password' class='textbox' name='newpsswd1' placeholder='New password' required></input>
+        <input type='password' class='textbox' name='newpsswd2' placeholder='Retype new password' required></input>
         <input class="btn" type="submit" value="Change password" style='color:black'></input>
     </form>
     <div class="message">
