--- a/templates/ResetConfirmation.html
+++ b/templates/ResetConfirmation.html
@@ -1,6 +1,7 @@
 <html>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
     <head>
+        <title>Confirmation</title>
     </head>
     <body>
     <div class='login-box'>
